test-cases/negative/test_016_object_creation_wrong_type.lay
# negative test: object creation with wrong type
# expected: type error should be thrown

the variable person of type Number is a new Person with
  name is 'Alice'


